syntax = "proto3";

package token;

service TokenService {
  rpc GetToken (GetTokenRequest) returns (ApiResponseString);
}

message GetTokenRequest {
  string userName = 1;
  string password = 2;
}

message ApiResponseString {
  string message = 1;
  repeated string errors = 2;
  bool isValid = 3;
  string result = 4;
}